# fabricate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fabricate/: __init__.py  cli.py  config.py  generator.py  git_ops.py  github_client.py  persona.py
